<resources>
    <string name="app_name">devcolibri_l24_DynamicFragment</string>
    <string name="add_fragment">Add</string>
    <string name="fragment_one">Fragment One</string>
    <string name="fragment_two">Fragment Two</string>
    <string name="del_fragment">Delete</string>
    <string name="rem_fragment">Remove</string>
    <string name="fragment">Fragment</string>
    <string name="back_stack">Back Stack</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
</resources>