<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_gravity="center">
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/add_fragment"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_del_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/del_fragment"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/button_replace_fragment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/rem_fragment"
            android:textSize="16sp"/>
    </LinearLayout>

    <Switch
        android:id="@+id/switch_back_stage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_gravity="center"
        android:layout_marginTop="5dp"

        android:layout_marginBottom="10dp"

        android:checked="false"
        android:minHeight="48dp"
        android:switchPadding="60dp"
        android:text="@string/back_stack"
        android:textColor="@color/black"
        android:textOff="@string/no"
        android:textOn="@string/yes">

    </Switch>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    </LinearLayout>


</LinearLayout>